--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.7.0",
     "@langchain/core": "^1.1.8",
     "@langchain/google-genai": "^2.1.3",
     "@langchain/langgraph": "^1.0.7",
