--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.7.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
